--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,71 +1,285 @@
-* {
-    margin: 0;
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
+* {
     box-sizing: border-box;
 }
 
-.conatiner {
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr 4fr;
+:root {
+    --primary-clr: #22254b;
+    --secondary-clr: #373b69;
+}
 
-    border: 1px solid red;
-    min-height: 100vh;
+body {
+    background: var(--primary-clr);
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+
+header {
+    background: var(--secondary-clr);
+}
+
+.navbar {
+    display: flex;
+    align-items: baseline;
+    padding-inline: 1rem;
+    padding-top: 1rem;
 }
 
 nav {
-    background: blue;
+    display: flex;
+    gap: 1rem;
+}
+.navbar img {
+    width: 200px;
 }
 
-nav ul > li {
-    padding: 1rem 1rem;
+.nav-links {
+    display: flex;
+    gap: 1rem;
+    list-style: none;
 }
 
-nav ul > li > a {
+.nav-links li > a {
     text-decoration: none;
-    color: #000;
-    font-weight: 600;
+    color: #eee;
+    font-size: 20px;
 }
 
-.right {
-    background: green;
-    padding: 1rem;
+.nav-links li > a:hover {
+    color: #14B6DB;
 }
 
-.search > input {
-    width: 80%;
-    padding: 0.5rem 1rem;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+form {
+    width: 90%;
+    margin-inline: auto;
+}
+
+.search {
+    background: transparent;
+    background:#EEE;
     border: none;
-    box-shadow: 2px 3px 4px 1px rgba(199, 199, 199, 0.5);
+    border-radius: 50px;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    color: grey;
+    font-family: inherit;
+
+    width: 85%;
 }
 
-.search > button {
-    width: 20%;
-    border: none;
-    padding: 0.5rem 1rem;
-    margin-left: -5px;
+.search:focus {
+    outline: 0;
+    background: var(--primary-clr);
+}
 
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
+.search::placeholder {
+    color: #5a5c7a;
+}
+
+.hero {
+    background-image: url(https://scontent-cpt1-1.xx.fbcdn.net/v/t39.30808-6/300504067_445684367592498_5957156852801815606_n.jpg?stp=dst-jpg_p480x480&_nc_cat=110&ccb=1-7&_nc_sid=e3f864&_nc_eui2=AeF17CGl9fTzsYgRmFv8TKOApc1TNkkLcNOlzVM2SQtw0zEQy6vnAKT6AsKthLs6d0elc_-z47Pn2XS7EmLBZieW&_nc_ohc=9j-5H-N5Xm0AX8WMOjv&_nc_ht=scontent-cpt1-1.xx&oh=00_AfAFPHayO5EnxLBy70IE7qbEcZESYc3ymNuXa-8zzBz6lQ&oe=64D39843);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #eee;
+}
+
+.hero h1 {
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.hero p {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.btn {
+    background: #14B6DB;
+    color: #eee;
+    border-radius: 50px;
+    padding: 0.5rem 1rem;
+    font-family: inherit;
+    font-size: 1rem;
+    width: 15%;
+
+    margin-left: -2.2rem;
+    margin-top: -1px;
+    transition: all 0.5s ease-in;
+}
+
+.btn:hover {
+    background: #14B6DB;
+    color: var(--primary-clr);
+}
+
+.main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: #eee;
 }
 
 .movies {
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
-    margin-top: 1rem;
+    display: flex;
     gap: 1rem;
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 330px;
 }
 
-.card {
-    border-radius: 8px;
+.movie {
+    flex-shrink: 0;
+    width: 170px;
+    height: 255px;
+   
+    border-radius: 10px;
+    box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
+    background: var(--secondary-clr);
+    display: flex;
+    flex-direction: column;
+    position: relative;
     cursor: pointer;
 }
-.card > img {
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
-    height: 20em;
+
+.movie img {
+    width: 100%;
+    object-fit: fill;
+    border-radius: 10px;
+}
+
+.movie-info {
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    padding: 0.5rem 1rem 1rem;
+    letter-spacing: 0.5px;
+    gap: 1rem;
+    width: 170px;
+}
+
+.movie-info span {
+    background: var(--primary-clr);
+    padding: 0.25rem 0.5rem;
+    border-radius: 4px;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+.movie-info h3 {
+    font-size: 11px;
+    color: var(--primary-clr);
+}
+
+.movie-info span.green {
+    color: lightgreen;
+}
+
+.movie-info span.orange {
+    color: orange;
+}
+
+.movie-info span.red {
+    color: red;
+}
+
+.overview {
+    position: absolute;
+    inset: 0;
+    overflow: hidden;
+    height: 255px;
+    background: #fff;
+    padding: 1rem;
+    display: none;
+    transition: all 1s ease-in;
+    font-size: 10px;
+    border-radius: 10px;
+    inset: 0;
+    background: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(5px);
+}
+
+.movie:hover .overview{
+    display: block;
+}
+
+.tag-error {
+    color: red;
+}
+
+.trending {
+    display: flex;
+    flex-direction: column;
+
+    background: #eee;
+    width: 100%;
+    padding: 1rem 5%;
+}
+
+.top {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.top h1 {
+    font-weight: 500;
+    color: var(--primary-clr);
+}
+
+.btn_top {
+    border: 1px solid var(--primary-clr);
+    border-radius: 50px;
+    width: 200px;
+    display: flex;
+}
+
+.btn_toggle {
+    width: 50%;
+    background: transparent;
+    color: var(--primary-clr);
+    text-align: center;
+    border: none;
+    border-radius: 50px;
+}
+
+.current {
+    background: var(--primary-clr);
+    color: #14B6DB;
+}
+
+footer {
+    background: var(--primary-clr);
+    color: #eee;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    padding: 2rem 5%;
+}
+
+footer img {
+    width: 100px;
+}
+
+.basics {
+    display: flex;
+    flex-direction: column;
+}
+
+.basics h3 {
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.basics a {
+    text-decoration: none;
+    color: #eee;
 }
