--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -24,6 +24,8 @@ header {
     align-items: baseline;
     padding-inline: 1rem;
     padding-top: 1rem;
+
+    position: relative;
 }
 
 nav {
@@ -282,4 +284,85 @@ footer img {
 .basics a {
     text-decoration: none;
     color: #eee;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    height: 30px;
+
+    position: absolute;
+
+    top: 1em;
+    right: 1em;
+
+    transform: translateX(300%);
+    transition: all 1s ease-in;
+
+    cursor: pointer;
+}
+
+.menu > div {
+    background: #14B6DB;
+    width: 30px;
+    height: 3px;
+
+    margin-top: 3.5px;
+    margin-bottom: 3.5px;
+    border-radius: 4px;
+}
+
+@media screen and (max-width: 900px) {
+    .search {
+        width: 70%;
+    }
+    .btn {
+        width: 130px;
+    }
+
+    .form {
+        align-items: center;
+        
+    }
+    .nav-links {
+        position: absolute;
+        top: 60px;
+        right: 1rem;
+        flex-direction: column;
+        gap: 1rem;
+        border-radius: 4px;
+        padding-right: 2rem;
+        transition: all 1s ease-in;
+        transform: translateX(1000px);
+        background: var(--primary-clr);
+        box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.3);
+    }
+
+    .hero p {
+        font-size: 14px;
+        text-align: center;
+
+        width: 80%;
+        margin-inline: auto;
+    }
+
+    .nav-links > li {
+        text-align: center;
+    }
+
+    .show {
+        transform: translateX(0);
+    }
+
+    .menu {
+        transform: translateX(0);
+    }
+    
+    footer { 
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 1rem;
+    }
 }
